# CastingRetrieval

./: .gitignore  README.md  dvc.yaml  environment.yaml  params.yaml  paramsl.yml  pyproject.toml
data/: .gitignore  fill_inside.dvc  labeled_cavities.dvc  max_distances.json  n2_comparison.dvc  voxel_model.dvc
data/partCode_n2/: 1012A_.json
data/stlModel/: 1012A_.STL  ASHAFT_PRT.STL  EX33.STL  HCH_PRT.STL  nippon_thompson_LWH20R_2.STL
dvclive/err/: metrics.json
dvclive/hc_err/: metrics.json
dvclive/hc_pr/: metrics.json
dvclive/n2_err/: metrics.json
dvclive/n2_hull_err/: metrics.json
dvclive/pr/: metrics.json
src/: MathDescription.py  ShapeDescription.py  cell_type.py  exp_cavities_label.py  exp_distance_calculation.py  exp_distance_calculationV2.py  exp_distance_comparison.py  exp_distance_comparisonV2.py  exp_fill_inside.py  exp_show_distribution.py  exp_show_distributionV2.py  exp_similarity_statistics.py  exp_volume_voxelization.py  extract_code.py  feature_code.py  fill_inside.py  test_volume.py  voxel_array.py
src/Experiments/: common_logging.py  exp_cavity_code.py  exp_cavity_code_similarity.py  exp_cavity_heat_statistics.py  exp_code_distance.py  exp_heat_signatures.py  exp_n2_hull_code.py  exp_n2_hull_code_similarity.py  exp_n2_hull_code_statistic.py  exp_n2_statistics.py  exp_similarity_statistcs.py
src/poseNormalize/: model.py  pose_normalize.py  visualize_stl.py  visualize_wireFrame.py  widgetTest.py
src/signatures/: MathDescription.py  __init__.py  (+3 more)
tests/: conftest.py  csv_files_equal.py  shape_signatures_dev.py  test_signatures.py
(+26 files in other folders)
